# wlanalyze

./: CMakeLists.txt  exception.cpp  exception.h  extendeddelegate.cpp  extendeddelegate.h  filter.ui  main.cpp  mainwindow.cpp  mainwindow.h  waylanddebug.cpp  waylanddebug.h
